<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie_date"
            type="com.example.example.MoviesResults" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/DarkBlue"
        tools:context=".ui.DetailedActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/backdrop_path"
                android:minHeight="260dp"
                app:image='@{movie_date.backdropPath ?? ""}'

                 app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitXY"
                android:layout_marginBottom="50dp"
                tools:src="@drawable/ic_launcher_background" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/poster_path"
                 app:image='@{movie_date.posterPath ?? ""}'

                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/overview"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/black_trans"
                android:gravity="center"
                android:minLines="3"
                android:text="@{movie_date.title}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/backdrop_path"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/poster_path"
                 tools:text="movie Name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/overview"
                android:id="@+id/overview"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="12dp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/backdrop_path" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:text="overview Details"
                android:minLines="5"
                android:text="@{movie_date.overview}"

                android:id="@+id/overview_detail"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/language"
                android:id="@+id/lang"
                android:textStyle="bold"
                android:textSize="20sp"

                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/overview_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@{movie_date.originalLanguage}"
                android:id="@+id/tagLineDetails"
                android:layout_marginTop="10dp"

                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/lang" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/vote_count"
                android:id="@+id/vote_count"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/tagLineDetails" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:text="13"
                android:text="@{movie_date.voteCount.toString()}"

                android:id="@+id/statusDetails"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/vote_count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/releaseDate"
                android:id="@+id/releaseDate"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/statusDetails" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:text="Release date"
                android:id="@+id/releaseDateDetails"
                android:layout_marginTop="10dp"
                android:text="@{movie_date.releaseDate.toString()}"

                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/releaseDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/voteAverage"
                android:id="@+id/vote_average"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/releaseDateDetails" />

            <TextView
                android:id="@+id/vote_average_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"

                android:text="@{movie_date.voteAverage.toString()}"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/vote_average"
                tools:text="7.1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>